# Natives

./: .gitignore  .gitmodules  CMakeLists.txt  Jenkinsfile  LICENSE  NOTICE.txt  pom.xml
src/main/c/: NativeAes.c  NativeCipherImpl.cpp  NativeHashImpl.cpp  NativeSha256.c  com_nukkitx_natives_aes_NativeAes.h  com_nukkitx_natives_sha256_NativeSha256.h  zlib_processor.c  zlib_processor.h
src/main/java/com/nukkitx/natives/: NativeCode.java
src/main/java/com/nukkitx/natives/aes/: NativeAes.java
src/main/java/com/nukkitx/natives/crc32c/: JavaCrc32C.java  Jdk9Crc32C.java
src/main/java/com/nukkitx/natives/sha256/: NativeSha256.java
src/main/java/com/nukkitx/natives/util/: ByteBufferUtils.java  CryptoUtil.java  LibraryLoader.java  Natives.java  PlatformUtils.java  UnsafeUtils.java
src/main/java/com/nukkitx/natives/zlib/: Inflater.java  Java11Deflater.java  Java11Inflater.java  JavaDeflater.java  JavaInflater.java  Zlib.java
src/main/java/net/md_5/bungee/jni/: NativeCode.java
src/main/java/org/cloudburstmc/natives/: NativeCode.java
src/main/java/org/cloudburstmc/natives/util/: CryptoUtil.java  LibraryLoader.java  Natives.java
src/main/java/org/cloudburstmc/natives/zlib/: Java11ZlibProcessor.java  JavaZlibProcessor.java  LibdeflateZlibProcessor.java  ZlibProcessor.java  ZlibType.java
src/test/java/com/nukkitx/natives/: NativeCipherTest.java  NativeSha256Test.java  NativeZlibTest.java
src/test/java/net/md_5/bungee/: NativeCipherTest.java  NativeZlibTest.java
src/test/java/org/cloudburstmc/natives/: NativeZlibTest.java  ZlibBenchmarkTest.java
(+1 files in other folders)
